force-app/main/default/objects/uiSection__c/uiSection__c.object-meta.xml
<CustomObject>
    <description>Sections will be used as part of a screen to display a process or a grid</description>
    <label>UI Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>