force-app/main/default/objects/uiSection__c/fields/BodyParameters__c.field-meta.xml
<CustomField>
    <fullName>BodyParameters__c</fullName>
    <label>Body Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>