force-app/main/default/objects/uiSection__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Order of the Section</description>
    <inlineHelpText>Order of the Section</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>