force-app/main/default/objects/uiSection__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>The Name of the Visualforce page or component</description>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>