force-app/main/default/objects/uiSection__c/fields/ParentScreenId__c.field-meta.xml
<CustomField>
    <fullName>ParentScreenId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent screen record Id</description>
    <inlineHelpText>Parent screen record Id</inlineHelpText>
    <label>Parent Screen</label>
    <referenceTo>uiScreen__c</referenceTo>
    <relationshipLabel>UI Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>